feat: getOthersInfo api
