# swagger.yaml
@@ -106,7 +106,28 @@ paths:
       summary: Get user personal information
       responses:
         '200':
-          description: Sign up successfully
+          description: get self info successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginUserResponse'
+      security:
+        - bearerAuth: []
+  /user/{userId}/info:
+    get:
+      tags:
+        - User
+      summary: Get others personal information
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: string
+          example: '537fe5d1-c76e-46d3-982f-43ed8d52f841'
+      responses:
+        '200':
+          description: Get others info successfully
           content:
             application/json:
               schema:
